vista de usuarios, cambios en la bbdd, arreglado el login y vistas con datos reales